--- a/search.html
+++ b/search.html
@@ -152,13 +152,6 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="citing.html">
-    Citing
-  </a>
-</li>
-
-
-<li class="nav-item ">
   <a class="nav-link nav-internal" href="apps/profiler.html">
     QProfiler
   </a>
@@ -267,13 +260,6 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="api_overview.html">
     API
-  </a>
-</li>
-
-
-<li class="nav-item ">
-  <a class="nav-link nav-internal" href="citing.html">
-    Citing
   </a>
 </li>
 
@@ -411,7 +397,7 @@
 
   <p class="copyright">
     
-      © Copyright 2025 IBM Research, Bryan Raubenolt, Aritra Bose, Kahn Rhrissorrakrai, Filippo Utro, Akhil Mohan, Daniel Blankenberg, Laxmi Parida.
+      © Copyright 2025 IBM Research.
       <br/>
     
   </p>
