--- a/apps/sage.html
+++ b/apps/sage.html
@@ -152,13 +152,6 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="../citing.html">
-    Citing
-  </a>
-</li>
-
-
-<li class="nav-item ">
   <a class="nav-link nav-internal" href="profiler.html">
     QProfiler
   </a>
@@ -265,13 +258,6 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../api_overview.html">
     API
-  </a>
-</li>
-
-
-<li class="nav-item ">
-  <a class="nav-link nav-internal" href="../citing.html">
-    Citing
   </a>
 </li>
 
@@ -418,7 +404,7 @@ documentation for details.</p>
 
   <p class="copyright">
     
-      © Copyright 2025 IBM Research, Bryan Raubenolt, Aritra Bose, Kahn Rhrissorrakrai, Filippo Utro, Akhil Mohan, Daniel Blankenberg, Laxmi Parida.
+      © Copyright 2025 IBM Research.
       <br/>
     
   </p>
