--- a/_modules/index.html
+++ b/_modules/index.html
@@ -150,13 +150,6 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="../citing.html">
-    Citing
-  </a>
-</li>
-
-
-<li class="nav-item ">
   <a class="nav-link nav-internal" href="../apps/profiler.html">
     QProfiler
   </a>
@@ -265,13 +258,6 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../api_overview.html">
     API
-  </a>
-</li>
-
-
-<li class="nav-item ">
-  <a class="nav-link nav-internal" href="../citing.html">
-    Citing
   </a>
 </li>
 
@@ -431,7 +417,7 @@
 
   <p class="copyright">
     
-      © Copyright 2025 IBM Research, Bryan Raubenolt, Aritra Bose, Kahn Rhrissorrakrai, Filippo Utro, Akhil Mohan, Daniel Blankenberg, Laxmi Parida.
+      © Copyright 2025 IBM Research.
       <br/>
     
   </p>
