--- a/genindex.html
+++ b/genindex.html
@@ -555,6 +555,10 @@
       <li><a href="api/qbiocode.visualization.visualize_correlation.html#qbiocode.visualization.visualize_correlation.plot_results_correlation">plot_results_correlation() (in module qbiocode.visualization.visualize_correlation)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api/qbiocode.embeddings.embed.html#qbiocode.embeddings.embed.pqk">pqk() (in module qbiocode.embeddings.embed)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="Q">Q</h2>
