--- a/_modules/qbiocode/learning/compute_pqk.html
+++ b/_modules/qbiocode/learning/compute_pqk.html
@@ -150,13 +150,6 @@
 
 
 <li class="nav-item ">
-  <a class="nav-link nav-internal" href="../../../citing.html">
-    Citing
-  </a>
-</li>
-
-
-<li class="nav-item ">
   <a class="nav-link nav-internal" href="../../../apps/profiler.html">
     QProfiler
   </a>
@@ -265,13 +258,6 @@
 <li class="nav-item ">
   <a class="nav-link nav-internal" href="../../../api_overview.html">
     API
-  </a>
-</li>
-
-
-<li class="nav-item ">
-  <a class="nav-link nav-internal" href="../../../citing.html">
-    Citing
   </a>
 </li>
 
@@ -407,7 +393,7 @@
 <span class="sd">    It supports various configurations such as encoding methods, entanglement strategies, and repetitions</span>
 <span class="sd">    of the feature map. The results are saved to files for training and test projections, which are reused</span>
 <span class="sd">    if they already exist to avoid redundant computations.</span>
-<span class="sd">    This function is part of the main quantum machine learning pipeline (qml4omics-profiler.py) and is intended for use in supervised learning tasks.</span>
+<span class="sd">    This function is part of the main quantum machine learning pipeline (QProfiler.py) and is intended for use in supervised learning tasks.</span>
 <span class="sd">    It leverages quantum computing to enhance feature extraction and classification performance on complex datasets.</span>
 <span class="sd">    The function returns the performance results, including accuracy, F1-score, AUC, runtime, as well as model parameters, and other relevant metrics.</span>
 <span class="sd">    </span>
@@ -606,7 +592,7 @@
 
   <p class="copyright">
     
-      © Copyright 2025 IBM Research, Bryan Raubenolt, Aritra Bose, Kahn Rhrissorrakrai, Filippo Utro, Akhil Mohan, Daniel Blankenberg, Laxmi Parida.
+      © Copyright 2025 IBM Research.
       <br/>
     
   </p>
